# HighLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  ex_rules.txt  readme.txt
data/palettes/: 395inchblackbuddy.pal  400uniqueartists.pal  adrift.pal  anoldfriend.pal  barbibausgarden.pal  berrysummer.pal  bettertomorrow.pal  bookofkells.pal  boreal.pal  clairdelune.pal  clfriends.pal  coldstarted.pal  dancetoforget.pal  dreammagnet.pal  entrapped.pal  firstraindrop.pal  flamingjune.pal  flamingo.pal  foreverlost.pal  freshcutday.pal  gentlewaves.pal  glowofmoonlight.pal  ilikeyoursmile.pal  influenza.pal  insidethismoment.pal  japan9.pal  japanesebath.pal  leathersandsky.pal  limeadeonice.pal  macchupicchu.pal  maddeningcaravan.pal  mangosformormons.pal  marshmallow.pal  monada.pal  newlyrisenmoon.pal  oceanabeach.pal  onefishtwofish.pal  onesixtyeight.pal  pancakedemand.pal  sakura.pal  (+18 more)
src/: main.c
